# wg-manager

./: README.md  _env   pyproject.toml
config/: settings.py  urls.py
config/static/admin/js/: copy.js
vpn/: admin.py  apps.py  keygen.py  models.py  receivers.py  services.py  tests.py  views.py
vpn/locale/en/LC_MESSAGES/: django.po
vpn/locale/ru/LC_MESSAGES/: django.po
